# robot_ros2_compat

./: .clang-format  .editorconfig  .gitignore  CLEARPATH_ROS2_COMPATIBILITY_TODO.md  CPP_STYLE_GUIDE.md  DEVELOPMENT_ENVIRONMENT_SETUP.md  LINUX_BRIDGE_BR0_BACKGROUNDER.md  MOTION_CORE_IMPLEMENTATION_PLAN.md  PROJECT_VISION_AND_ARCHITECTURE.md  README.md  ROBOT_NETWORK_SETUP.md  ROS2_ZENOH_GATEWAY_ARCHITECTURE_PLAN.md  pixi.toml
ros2_ws/src/ros2_zenoh_gateway/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2_zenoh_gateway/include/ros2_zenoh_gateway/: hello_component.hpp
ros2_ws/src/ros2_zenoh_gateway/src/: hello_component.cpp  register_hello_component.cpp
ros2_ws/src/ros2_zenoh_gateway/test/: test_hello_component.cpp
